pingpong-log-output/kubernetes/manifests/00-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: pingpong-files-claim
      containers:
        - name: pingpong
          image: sirpacoder/pingpong:v3.3
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/shared/files
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{"target_port":8000}}, "ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
