pingpong-log-output/kubernetes/manifests/01-log_output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: log-output-files-claim
        - name: reader-files
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: hash-generator
          image: sirpacoder/hash-generator:v3.3
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/shared/files
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

        - name: hash-reader
          image: sirpacoder/hash-reader:v3.3
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/shared/files
            - name: reader-files
              mountPath: /usr/src/app/reader/info
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"target_port":3001}}, "ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
