pingpong-log-output/kubernetes/manifests/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-log-output-ingress
  namespace: exercises
  labels:
    name: pingpong-log-output
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
          - path: /reset
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
